[ims-142] - end.d&swagger
