# ims-server/src/Swagger.json
@@ -83,7 +83,7 @@
                 }
             }
         },
-        "/incident/updateIncidence/{id}": {
+        "/incident/updateIncident/{id}": {
             "put": {
                 "tags": [
                     "incident"
@@ -116,7 +116,8 @@
                     }
                 }
             }
-        }, "/aggrigation": {
+        },
+        "/aggrigation": {
             "get": {
                 "tags": [
                     "aggrigation"
