# ims-server/src/routes/IncidentRout.ts
@@ -1,5 +1,5 @@
 import express from 'express'
-import IncidenceController from '../controllers/IncidentControler'
+import IncidenceController from '../controllers/IncidentController'
 import aggregateIncident from '../aggregations/incidentAggregation'
 
 const router = express.Router()
@@ -8,7 +8,7 @@ const incidenceController = new IncidenceController()
 router.get('/', incidenceController.getAllIncidents)
 router.get('/:id', incidenceController.getIncidentById)
 router.get('getAggrigation', aggregateIncident)
-router.post('/', incidenceController.addIncident)
-router.put('/:id', incidenceController.updateIncident)
+router.post('/addIncident', incidenceController.addIncident)
+router.put('/updateIncident/:id', incidenceController.updateIncident)//check
 
-export default router
+export default router;
